SERVER-11830 handle geo near with two points on opposite sides of equator